# DissentSelfCensorship

./: .gitignore  Italy_out_eu_cont.csv  LICENSE  README  README.md  anaylsis.ipynb  helper.py  notes.html  notes.ipynb  opt_dissent_taubounded.py  opt_dissent_tauknown.py  phases.txt  pyproject.toml  requirements.txt  requirements.yml  rough_notes.ipynb
EU_Data/: LFN_data.xlsx  RF_data.xlsx  RO_data.xlsx  Weighted_ParlGov.csv  Weighted_ParlGov_Updated.csv  Weighted_ParlGov_updated.csv  eucommission_test.csv  official_eu_data.xlsx
Misc_Files/: a.csv.txt
Reddit_Data/: reddit.xlsx
Twitter_Data/: BTSArmy.csv.txt  BTSArmy_Tweet_By_Count.csv.txt  BTSArmy_Tweet_By_User.csv.txt  Khashoggi.csv.txt  Khashoggi_Tweet_By_Count.csv.txt  Khashoggi_Tweet_By_User.csv.txt  MeToo.csv.txt  MeToo_Tweet_By_Count.csv.txt  MeToo_Tweet_By_User.csv.txt  QAnon.csv.txt  QAnon_Tweet_By_Count.csv.txt  QAnon_Tweet_By_User.csv.txt
code/: anish_thesis.py  engine.py  experiments.py  hillclimbing.py  opt_action.nb  opt_action.py  opt_dissent_taubounded.py  phase_diagram.py  plotgraph.py  plotter.py  solidarity.py
derivations/: desire_utility_heatmap.py  desire_utility_map.py  opt_action.py  opt_dissent.nb  opt_dissent.py  opt_dissent_tau_bounded.ipynb  opt_dissent_tau_bounded.nb  opt_dissent_taubounded.nb  opt_dissent_tauknown.nb
opt_action/: opt_action.py  phase_diagram.py
opt_tolerance/: opttaunormal.py
other_code/: d2a_thesis.py  opt_dissent_taubounded.py  opt_tolerance_dknown.nb
simulations/: main.py  plotgraph.py  simulation.py
